tests/typing/good/testfile-override-1.scala
class A { def m(){} }
class B extends A { override def m(){} }
object Main { def main(args: Array[String]) { } }
