tests/typing/bad/testfile-cyclic3-1.scala
class A extends B {}
class B extends C {}
class C extends D {}
class D extends A {}
object Main { def main(args: Array[String]) { } }
